--- a/less/core/semantic.less
+++ b/less/core/semantic.less
@@ -10,7 +10,7 @@ html {
   height: calc(100%);
 }
 body {
-  min-width: 100%;
+//  min-width: 100%; potentially removing this because it impacts am-margin
   min-height: 100%;
   .flex-display;
   .flex-direction(column);
